--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ plugins {
     id 'maven-publish'
 }
 
-version = project.mod_version
-group = project.maven_group
+version = mod_version
+group = maven_group
 
 base {
-    archivesName = project.archives_base_name
+    archivesName = archives_base_name
 }
 
 loom {
@@ -39,34 +39,34 @@ repositories {
 }
 
 dependencies {
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    minecraft "com.mojang:minecraft:$minecraft_version"
+    mappings "net.fabricmc:yarn:$yarn_mappings:v2"
+    modImplementation "net.fabricmc:fabric-loader:$loader_version"
 
-    include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
-    include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
-    include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}")
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modImplementation "org.lilbrocodes:composer-reloaded:${project.composer_version}"
+    include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-base:$cca_version")
+    include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:$cca_version")
+    include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-world:$cca_version")
+    modImplementation "net.fabricmc.fabric-api:fabric-api:$fabric_version"
+    modImplementation "org.lilbrocodes:composer-reloaded:$composer_version"
 
-    modImplementation "me.fzzyhmstrs:fzzy_config:${project.fzzy_version}+${project.minecraft_version}"
+    modImplementation "me.fzzyhmstrs:fzzy_config:$fzzy_version+$minecraft_version"
 
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
-    compileOnly("maven.modrinth:simple-voice-chat:fabric-${project.voicechat}")
-    compileOnly("maven.modrinth:replaymod:${project.replaymod}")
+    compileOnly("maven.modrinth:simple-voice-chat:fabric-$voicechat")
+    compileOnly("maven.modrinth:replaymod:$replaymod")
 }
 
 processResources {
-    inputs.property "version", project.version
-    inputs.property "minecraft_version", project.minecraft_version
-    inputs.property "loader_version", project.loader_version
+    inputs.property "version", version
+    inputs.property "minecraft_version", minecraft_version
+    inputs.property "loader_version", loader_version
     filteringCharset "UTF-8"
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version,
-                "minecraft_version": project.minecraft_version,
-                "loader_version": project.loader_version
+        expand "version": version,
+                "minecraft_version": minecraft_version,
+                "loader_version": loader_version
     }
 }
 
@@ -88,7 +88,7 @@ java {
 
 jar {
     from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}" }
+        rename { "${it}_${archives_base_name}" }
     }
 }
 
